--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -1,33 +1,1 @@
-<div class="container mt-5">
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-
-      <div class="card shadow">
-        <div class="card-body">
-
-          <h3 class="card-title text-center mb-4">Create New Blog</h3>
-
-          <%= form_for @blog do |form| %>
-
-            <div class="mb-3">
-              <%= form.label :title, class: "form-label" %>
-              <%= form.text_field :title, class: "form-control", placeholder: "Enter blog title" %>
-            </div>
-
-            <div class="mb-3">
-              <%= form.label :description, class: "form-label" %>
-              <%= form.text_area :description, class: "form-control", rows: 4, placeholder: "Enter blog description" %>
-            </div>
-
-            <div class="d-grid">
-              <%= form.submit "Create Blog", class: "btn btn-primary" %>
-            </div>
-
-          <% end %>
-
-        </div>
-      </div>
-
-    </div>
-  </div>
-</div>
+<%= render 'form' %>
