integrated weather api and sidekiq and email

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -42,3 +42,24 @@
     </tbody>
   </table>
 </div>
+<%# <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+  $(document).ready(function () {
+    $('.table-dark tr th:nth-child(2)').text('Name');
+  });
+</script> %>
+
+<%# <script>
+  $(document).ready(function() {
+    $('.table-dark tr th:nth-child(2)').on('click', function(){
+      $ajax({
+        url: google.com/blog/1
+        method: "get"
+        dataType: json
+        success: function(data) {
+
+        }
+      })
+    })
+  })
+</script> %>
