--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+
+
+@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
