--- a/app/views/navbar/_navbar.html.erb
+++ b/app/views/navbar/_navbar.html.erb
@@ -1,4 +1,55 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-info">
+  <%= link_to "My Store", root_path, class: "navbar-brand" %>
+  
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <%= link_to root_path, class: "nav-link" do %>
+          Home <span class="sr-only">(current)</span>
+        <% end %>
+      </li>
+
+      <li class="nav-item">
+        <span class="nav-link">
+          Hello, <%= user_signed_in? ? current_user.email.split("@")[0].capitalize : "Guest" %>
+        </span>
+      </li>
+    </ul>
+
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <%= link_to cart_path, class: "nav-link font-weight-bold" do %>
+          🛒 Cart (<%= current_cart.line_items.sum(:quantity) %>)
+        <% end %>
+      </li>
+
+      <% if user_signed_in? %>
+        <li class="nav-item">
+          <%= button_to 'Logout', destroy_user_session_path, 
+              method: :delete, 
+              class: "btn btn-outline-light btn-sm ml-lg-2 mt-1" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "My Orders", orders_path, class: "nav-link" %>
+        </li>
+      <% else %>
+        <li class="nav-item">
+          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</nav>
+
+
+
+
+<!--
+<nav class="navbar navbar-expand-lg navbar-dark bg-info">
   <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -47,3 +98,4 @@
     </form> %>
   </div>
 </nav>
+-->
